<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantallas.PantallaPrincipal">

    <ImageView
        android:layout_width="162dp"
        android:layout_height="154dp"
        android:src="@drawable/richman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:lines="1"
            android:text="@string/launch_welcome_text"
            android:fontFamily="@font/ubuntu"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.401" />

        <Button
            style="@style/buttonPrimary"
            android:layout_marginBottom="2dp"
            android:onClick="launchGameActivity"
            android:text="@string/botonjugar" />

        <Button
            style="@style/buttonSecondary"
            android:onClick="launchOptionsActivity"
            android:text="@string/botonopciones" />

        <Button
            style="@style/buttonSecondary"
            android:onClick="launchInfoActivity"
            android:text="@string/botoninfo" />

        <Button
            style="@style/buttonSecondary"
            android:onClick="closeApp"
            android:text="@string/botoncerrar" />



    </LinearLayout>

    <ImageView
        android:layout_width="242dp"
        android:layout_height="230dp"
        android:src="@drawable/devil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

</androidx.constraintlayout.widget.ConstraintLayout>