<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shopping_drawable"
    tools:context=".pantallas.PantallaMejoras">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/barra"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                style="@style/info_bar_child"
                android:background="@drawable/hbarra">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="4dp"
                    android:onClick="returnOnClick"
                    app:srcCompat="@drawable/atras" />
            </LinearLayout>

            <LinearLayout
                style="@style/info_bar_child"
                android:background="@drawable/hbarra">

                <ImageView

                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/monedastotales"
                    app:srcCompat="@drawable/totalcoins" />

                <TextView
                    android:id="@+id/text_shop_coins"
                    style="@style/textview_style"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                style="@style/info_bar_child"
                android:background="@drawable/hbarra">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/monedasporclick"
                    app:srcCompat="@drawable/coinstack" />

                <TextView
                    android:id="@+id/text_click_value"
                    style="@style/textview_style" />
            </LinearLayout>

            <LinearLayout
                style="@style/info_bar_child"
                android:background="@drawable/hbarra">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/monedasautoclick"
                    app:srcCompat="@drawable/autoclicker" />

                <TextView
                    android:id="@+id/text_auto_click"
                    style="@style/textview_style" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_upgrades"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>